--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "TOKEN": "",
-  "CHANNEL_WELCOME": "",
-  "ROLES_WELCOME": ["",""]
+  "TOKEN": "MTIyMzMwMzM4NjgzMzc0ODIwOQ.GvnCI1.vo9DGBorf0CjD2NWt86DwZec9Re-emnZBAd7vA",
+  "CHANNEL_WELCOME": "📝—┊kartlarimiz",
+  "ROLES_WELCOME": ["Kayıtsız",""]
 }
